--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ ELASTIC_API="/movies"
 # Photobank-backend host
 # !!!without trailing slash
 PHOTOBANK_BACKEND_HOST="https://photo.mir24.tv"
+PHOTOBANK_BACKEND_HOST_API='/api?'
+PHOTOBANK_BACKEND_ADMIN_USER=''
+PHOTOBANK_BACKEND_ADMIN_KEY=''
