--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "classnames": "^2.2.0",
     "compression": "^1.6.0",
     "cors": "^2.7.1",
+    "dotenv": "^8.1.0",
     "ejs": "^2.3.4",
     "elasticsearch": "^10.0.1",
     "express": "^4.13.3",
