--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "classnames": "^2.2.0",
     "compression": "^1.6.0",
     "cors": "^2.7.1",
+    "dotenv": "^8.0.0",
     "ejs": "^2.3.4",
     "elasticsearch": "^10.0.1",
     "express": "^4.13.3",
-    "history": "1.13.1",
+    "history": "1.17.0",
     "lodash": "^4.2.0",
     "method-override": "^2.3.5",
     "normalize.css": "^3.0.3",
